--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,8 @@ lazy_static = "1.4"
 indexmap = "1.7"
 maplit = "1.0.2"
 chrono = "0.4"
+pbkdf2 = "0.10"
+unicase = "2.6"
+regex = "1.5"
+validator = "0.14"
+aes = "0.7"
